--- a/Games-Practicing/Packman/Packman.html
+++ b/Games-Practicing/Packman/Packman.html
@@ -5,9 +5,14 @@
     <title>The Packman Game</title>
     <link rel="stylesheet" href="game.css">
     <script src="./game.js"></script>
+    
 </head>
 <body>
     <h1>The Packman Game</h1>
     <canvas id="game-canvas" width="1200" height="400"></canvas>
+    <script>
+        var game = createGame("#game-canvas");
+        game.start();
+    </script>
 </body>
 </html>
