--- a/ExamPractice/04. JavaScript DOM UI/task-3/task-files/result.html
+++ b/ExamPractice/04. JavaScript DOM UI/task-3/task-files/result.html
@@ -28,12 +28,12 @@
 			</li>			
 		</ul>
 	</div>
-	<script id="books-list-template" type='text/x-handlebars-template'>
-		<!--content -->
+<!--	<script id="books-list-template" type='text/x-handlebars-template'>
+		content
 	</script>
 	<script id="book-details-template" type='text/x-handlebars-template'>
-		<!--content -->
-	</script>
+		content
+	</script>  -->
 	<div id="book-details-container">
 		<div class="book-details">
 			<h2 class="book-title">
