--- a/WebTrack/05. JavaScript OOP/02. Closures and Scopes/task-1.html
+++ b/WebTrack/05. JavaScript OOP/02. Closures and Scopes/task-1.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./task-1.js"></script>
+    <script src="task-1.js"></script>
 </body>
 </html>
