--- a/WorkShops/02. JavaScriopt Applications/WorkShop2015/forum-workshop-template/public/index.html
+++ b/WorkShops/02. JavaScriopt Applications/WorkShop2015/forum-workshop-template/public/index.html
@@ -5,6 +5,6 @@
   <title>Workshop: Simple Forum with Sammy.js, jQuery and Handlebars</title>
 </head>
 <body>
-
+<script></script>
 </body>
 </html>
