--- a/WorkShops/02. JavaScriopt Applications/WorkShop2015/forum-workshop-template/public/index.html
+++ b/WorkShops/02. JavaScriopt Applications/WorkShop2015/forum-workshop-template/public/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Workshop: Simple Forum with Sammy.js, jQuery and Handlebars</title>
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 </head>
+
 <body>
-<script></script>
+
+  <script src="bower_components/jquery/dist/jquery.js"></script>
+  <script src="bower_components/sammy/lib/sammy.js"></script>
+  <script src="bower_components/handlebars/handlebars.js"></script>
+  <script src="bower_components/sha1/index.js"></script>
+  <script src="bower_components/moment/min/moment.min.js"></script>
+  <!-- app code -->
+
+  <script src="js/templates.js"></script>
+  <script src="js/data.js"></script>
 </body>
+
 </html>
