Added buttons and input fields

--- a/CSharp/10. ASP.NET Core/01. ASP.NET Core Exercise/CatsServer/CatsServer/wwwroot/cats-add-form.html
+++ b/CSharp/10. ASP.NET Core/01. ASP.NET Core Exercise/CatsServer/CatsServer/wwwroot/cats-add-form.html
@@ -1,10 +1,25 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
+﻿
     <h1>Add Cat</h1>
-</body>
-</html>
+
+    <form method="post">
+        <label for="Name">Name</label>
+        <input type="text" name="Name" id="Name" />
+        <br />
+
+        <label for="Name">Age</label>
+        <input type="number" name="Age" id="Age" />
+        <br />
+
+
+        <label for="Name">Breed</label>
+        <input type="text" name="Breed" id="Breed" />
+        <br />
+
+
+        <label for="Name">ImageUrl</label>
+        <input type="url" name="ImageUrl" id="ImageUrl" />
+        <br />
+
+        <input type="submit" value="Add Cat" />
+
+    </form>
