--- a/CSharp/10. ASP.NET Core/01. ASP.NET Core Exercise/CatsServer/CatsServer/wwwroot/cats-add-form.html
+++ b/CSharp/10. ASP.NET Core/01. ASP.NET Core Exercise/CatsServer/CatsServer/wwwroot/cats-add-form.html
@@ -1,22 +1,22 @@
 ﻿
     <h1>Add Cat</h1>
 
-    <form method="post">
-        <label for="Name">Name</label>
+    <form method="post" action="/cat/add">
+        <label for="Name">Name:</label>
         <input type="text" name="Name" id="Name" />
         <br />
 
-        <label for="Name">Age</label>
+        <label for="Name">Age:</label>
         <input type="number" name="Age" id="Age" />
         <br />
 
 
-        <label for="Name">Breed</label>
+        <label for="Name">Breed:</label>
         <input type="text" name="Breed" id="Breed" />
         <br />
 
 
-        <label for="Name">ImageUrl</label>
+        <label for="Name">ImageUrl:</label>
         <input type="url" name="ImageUrl" id="ImageUrl" />
         <br />
 
